[package]
name = "loempia"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.17.0"
serial-core = "0.4.0"
serial-unix = "0.4.0"
svg = "0.13.0"
thiserror = "1.0.38"
